--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,24 +1,78 @@
 <% layout('layouts/boilerplate') %>
-<h1>Edit Campground</h1>
-<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-  <div>
-    <label for="title">Title</label>
-    <input
-      type="text"
-      id="title"
-      name="campground[title]"
-      value="<%= campground.title %>"
-    />
+<div class="row">
+  <h1 class="text-center">Edit Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+      <div class="my-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          name="campground[title]"
+          placeholder="Campground"
+          value="<%= campground.title %>"
+        />
+        <label class="form-label" for="title">Title</label>
+      </div>
+      <div class="mb-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="location"
+          name="campground[location]"
+          placeholder="Location"
+          value="<%= campground.location %>"
+        />
+        <label class="form-label" for="location">Location</label>
+      </div>
+      <div class="mb-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="image"
+          name="campground[image]"
+          placeholder="Image"
+          value="<%= campground.image %>"
+        />
+        <label class="form-label" for="image">Image URL</label>
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text">$</span>
+        <div class="form-floating">
+          <input
+            type="text"
+            class="form-control"
+            aria-label="Amount (to the nearest dollar)"
+            id="price"
+            name="campground[price]"
+            placeholder="150"
+            value="<%= campground.price %>"
+          />
+          <label for="price" class="form-label">Price</label>
+        </div>
+        <span class="input-group-text">.00</span>
+      </div>
+      <div class="mb-3 form-floating">
+        <textarea
+          class="form-control"
+          id="description"
+          name="campground[description]"
+          placeholder="Description"
+          style="height: 100px"
+        >
+          <%= campground.description %>
+        </textarea>
+        <label class="form-label" for="description">Description</label>
+      </div>
+
+      <div class="mb-3">
+        <button class="btn text-white" style="background-color: #3d0a91">
+          Save Campground
+        </button>
+      </div>
+    </form>
+    <a class="btn btn-secondary" href="/campgrounds/<%= campground._id %>"
+      >Back to Campground</a
+    >
   </div>
-  <div>
-    <label for="location">Location</label>
-    <input
-      type="text"
-      id="location"
-      name="campground[location]"
-      value="<%= campground.location %>"
-    />
-  </div>
-  <button>Save Campground</button>
-</form>
-<a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+</div>
