--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,13 +1,70 @@
 <% layout('layouts/boilerplate') %>
-<form action="/campgrounds" method="POST">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" id="title" name="campground[title]" />
+<div class="row">
+  <h1 class="text-center">New Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds" method="POST">
+      <div class="my-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          name="campground[title]"
+          placeholder="Campground"
+        />
+        <label class="form-label" for="title">Title</label>
+      </div>
+      <div class="mb-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="location"
+          name="campground[location]"
+          placeholder="Location"
+        />
+        <label class="form-label" for="location">Location</label>
+      </div>
+      <div class="mb-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="image"
+          name="campground[image]"
+          placeholder="Image"
+        />
+        <label class="form-label" for="image">Image URL</label>
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text">$</span>
+        <div class="form-floating">
+          <input
+            type="text"
+            class="form-control"
+            aria-label="Amount (to the nearest dollar)"
+            id="price"
+            name="campground[price]"
+            placeholder="150"
+          />
+          <label for="price" class="form-label">Price</label>
+        </div>
+        <span class="input-group-text">.00</span>
+      </div>
+      <div class="mb-3 form-floating">
+        <textarea
+          class="form-control"
+          id="description"
+          name="campground[description]"
+          placeholder="Description"
+          style="height: 100px"
+        ></textarea>
+        <label class="form-label" for="description">Description</label>
+      </div>
+
+      <div class="mb-3">
+        <button class="btn text-white" style="background-color: #3d0a91">
+          Add Campground
+        </button>
+      </div>
+    </form>
+    <a class="btn btn-secondary" href="/campgrounds">All Campgrounds</a>
   </div>
-  <div>
-    <label for="location">Location</label>
-    <input type="text" id="location" name="campground[location]" />
-  </div>
-  <button>Add Campground</button>
-</form>
-<a href="/campgrounds">All Campgrounds</a>
+</div>
