--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,12 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form
+      action="/campgrounds"
+      method="POST"
+      novalidate
+      class="needs-validation"
+    >
       <div class="my-3 form-floating">
         <input
           type="text"
@@ -10,6 +15,7 @@
           id="title"
           name="campground[title]"
           placeholder="Campground"
+          required
         />
         <label class="form-label" for="title">Title</label>
       </div>
@@ -20,6 +26,7 @@
           id="location"
           name="campground[location]"
           placeholder="Location"
+          required
         />
         <label class="form-label" for="location">Location</label>
       </div>
@@ -30,6 +37,7 @@
           id="image"
           name="campground[image]"
           placeholder="Image"
+          required
         />
         <label class="form-label" for="image">Image URL</label>
       </div>
@@ -43,6 +51,7 @@
             id="price"
             name="campground[price]"
             placeholder="150"
+            required
           />
           <label for="price" class="form-label">Price</label>
         </div>
@@ -55,6 +64,7 @@
           name="campground[description]"
           placeholder="Description"
           style="height: 100px"
+          required
         ></textarea>
         <label class="form-label" for="description">Description</label>
       </div>
