--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -75,6 +75,6 @@
         </button>
       </div>
     </form>
-    <a class="btn btn-secondary" href="/campgrounds">All Campgrounds</a>
+    <a class="btn btn-outline-secondary" href="/campgrounds">All Campgrounds</a>
   </div>
 </div>
