--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,6 +11,7 @@
         <li class="list-group-item text-muted"><%= campground.location %></li>
         <li class="list-group-item">$<%= campground.price %>/night</li>
       </ul>
+      <% if (currentUser && campground.author.equals(currentUser._id)) { %>
       <div class="card-body">
         <a
           href="/campgrounds/<%= campground._id %>/edit"
@@ -25,7 +26,10 @@
           <button class="btn btn-outline-dark">Delete</button>
         </form>
       </div>
-      <div class="card-footer text-muted">2 days ago</div>
+      <% } %>
+      <div class="card-footer text-muted">
+        Submitted by <%= campground.author.username %> 2 days ago
+      </div>
     </div>
   </div>
   <div class="col-6">
