--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -41,16 +41,46 @@
       method="POST"
       novalidate
     >
-      <div class="mb-3">
-        <label for="rating" class="form-label">Rating</label>
-        <input
-          type="range"
-          class="form-range"
-          min="1"
-          max="5"
-          id="rating"
-          name="review[rating]"
-        />
+      <div class="mt-3">
+        <fieldset class="starability-grow mx-auto">
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+            class="form-check-input"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+            checked
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
       <div class="mb-3 form-floating">
         <textarea
@@ -71,9 +101,16 @@
     </form>
     <% } %> <% for (let review of campground.reviews) { %>
     <div class="card mb-3">
-      <div class="card-header">Rating: <%= review.rating %></div>
+      <div class="card-header">
+        <p
+          class="starability-result mt-3 mx-auto"
+          data-rating="<%= review.rating %>"
+        >
+          Rated: <%= review.rating %> stars
+        </p>
+      </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Review: <%= review.body %></li>
+        <li class="list-group-item"><%= review.body %></li>
         <% if (currentUser && review.author.equals(currentUser._id)) { %>
         <li class="list-group-item text-center">
           <form
