--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,48 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
   <div class="col-6">
+    <div id="campgroundImages" class="carousel slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <% campground.images.forEach((image, i) => { %>
+        <button
+          type="button"
+          data-bs-target="#campgroundImages"
+          data-bs-slide-to="<%= i %>"
+          class="<%= i === 0 ? 'active' : '' %>"
+          aria-current="<%= i === 0 ? 'true' : '' %>"
+          aria-label="Slide <%= i + 1 %>"
+        ></button>
+        <% }) %>
+      </div>
+      <div class="carousel-inner">
+        <% campground.images.forEach((image, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+          <img src="<%= image.url %>" class="d-block w-100" alt="" />
+        </div>
+        <% }) %>
+      </div>
+      <% if (campground.images.length > 1) { %>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#campgroundImages"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#campgroundImages"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+      <% } %>
+    </div>
     <div class="card text-center mb-3">
-      <img src="<%= campground.image %>" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
         <p class="card-text"><%= campground.description %></p>
