--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
   <div class="col-6">
+    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="campgroundImages" class="carousel slide" data-bs-ride="true">
       <div class="carousel-indicators">
         <% campground.images.forEach((image, i) => { %>
@@ -169,3 +170,8 @@
     <% } %>
   </div>
 </div>
+<script>
+  const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
+  const campground = <%- JSON.stringify(campground) %>
+</script>
+<script src="/javascript/showPageMap.js"></script>
