--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -89,9 +89,7 @@
         <% }) %>
       </div>
       <div class="mb-3">
-        <button class="btn text-white" style="background-color: #3d0a91">
-          Save Campground
-        </button>
+        <button class="btn btn-outline-primary">Save Campground</button>
       </div>
     </form>
     <a
