--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -70,9 +70,7 @@
       </div>
 
       <div class="mb-3">
-        <button class="btn text-white" style="background-color: #3d0a91">
-          Add Campground
-        </button>
+        <button class="btn btn-outline-primary">Add Campground</button>
       </div>
     </form>
     <a class="btn btn-outline-secondary" href="/campgrounds">All Campgrounds</a>
