--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -135,9 +135,7 @@
         <label class="form-label" for="body">Review</label>
       </div>
       <div class="text-center">
-        <button class="btn text-white" style="background-color: #3d0a91">
-          Submit
-        </button>
+        <button class="btn btn-outline-primary">Submit</button>
       </div>
     </form>
     <% } %> <% for (let review of campground.reviews) { %>
