--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,10 +36,7 @@
           Jump right in and explore our many campgrounds. <br />
           Feel free to share some of your own and comment on others!
         </p>
-        <a
-          class="btn btn-large text-white fw-bold"
-          style="background-color: #3d0a91"
-          href="/campgrounds"
+        <a class="btn btn-large text-white fw-bold" href="/campgrounds"
           >View Campgrounds</a
         >
       </main>
