--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,8 +1,7 @@
 <% if (success && success.length) { %>
 <div
-  class="alert alert-dismissible fade show text-white text-center"
+  class="alert alert-dismissible fade show text-white text-center primary-color"
   role="alert"
-  style="background-color: #3d0a91"
 >
   <%= success %>
   <button
