--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer py-3 mt-auto" style="background-color: #3d0a91">
+<footer class="footer py-3 mt-auto primary-color">
   <div class="container">
     <span class="text-muted">&copy; YelpCamp 2024</span>
   </div>
