--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,4 @@
-<nav
-  class="navbar navbar-expand-lg navbar-dark sticky-top"
-  style="background-color: #3d0a91"
->
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top primary-color">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">YelpCamp</a>
     <button
