--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -25,13 +25,7 @@
         />
         <label class="form-label" for="password">Password</label>
       </div>
-      <button
-        type="submit"
-        class="btn btn-dark"
-        style="background-color: #3d0a91"
-      >
-        Login
-      </button>
+      <button type="submit" class="btn btn-outline-primary">Login</button>
     </form>
   </div>
 </div>
