--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -36,13 +36,7 @@
         />
         <label class="form-label" for="password">Password</label>
       </div>
-      <button
-        type="submit"
-        class="btn btn-dark"
-        style="background-color: #3d0a91"
-      >
-        Register
-      </button>
+      <button type="submit" class="btn btn-outline-primary">Register</button>
     </form>
   </div>
 </div>
