--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,6 +15,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/app.css" />
     <link rel="stylesheet" href="/css/stars.css" />
   </head>
   <body class="d-flex flex-column vh-100">
