--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,42 +1,63 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-  <h1 class="text-center">Create Account</h1>
-  <div class="col-6 offset-3">
-    <form action="/register" method="POST" novalidate class="needs-validation">
-      <div class="my-3 form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="username"
-          name="username"
-          placeholder="Username"
-          required
+<div class="container d-flex justify-content-center align-items-center mt-3">
+  <div class="row flex-fill">
+    <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+      <div class="card shadow">
+        <img
+          src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+          alt=""
+          class="card-img-top"
         />
-        <label class="form-label" for="username">Username</label>
+        <div class="card-body">
+          <h5 class="card-title">Create Account</h5>
+          <form
+            action="/register"
+            method="POST"
+            novalidate
+            class="needs-validation"
+          >
+            <div class="my-3 form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                name="username"
+                placeholder="Username"
+                required
+                autofocus
+              />
+              <label class="form-label" for="username">Username</label>
+            </div>
+            <div class="my-3 form-floating">
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+              <label class="form-label" for="email">Email</label>
+            </div>
+            <div class="my-3 form-floating">
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                name="password"
+                placeholder="Password"
+                required
+              />
+              <label class="form-label" for="password">Password</label>
+            </div>
+            <div class="d-grid">
+              <button type="submit" class="btn btn-outline-primary">
+                Register
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
-      <div class="my-3 form-floating">
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Email"
-          required
-        />
-        <label class="form-label" for="email">Email</label>
-      </div>
-      <div class="my-3 form-floating">
-        <input
-          type="password"
-          class="form-control"
-          id="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
-        <label class="form-label" for="password">Password</label>
-      </div>
-      <button type="submit" class="btn btn-outline-primary">Register</button>
-    </form>
+    </div>
   </div>
 </div>
