--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
   <div class="col-6">
-    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="campgroundImages" class="carousel slide" data-bs-ride="true">
       <div class="carousel-indicators">
         <% campground.images.forEach((image, i) => { %>
@@ -74,6 +73,7 @@
     </div>
   </div>
   <div class="col-6">
+    <div id="map"></div>
     <% if (currentUser) { %>
     <h2>Leave a Review</h2>
     <form
