--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -75,7 +75,12 @@
       </div>
       <div class="mb-3">
         <% campground.images.forEach((img, i) => { %>
-        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="" />
+        <img
+          crossorigin="anonymous"
+          src="<%= img.thumbnail %>"
+          class="img-thumbnail"
+          alt=""
+        />
         <div class="form-check-inline mb-3">
           <input
             class="form-check-input"
