--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,8 +10,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+    <script
+      crossorigin="anonymous"
+      src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"
+    ></script>
     <link
+      crossorigin="anonymous"
       href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css"
       rel="stylesheet"
     />
