--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,10 +10,16 @@
   <div class="row">
     <div class="col-md-4">
       <% if (campground.images.length) { %>
-      <img class="img-fluid" src="<%= campground.images[0].url %>" alt="" />
+      <img
+        crossorigin="anonymous"
+        class="img-fluid"
+        src="<%= campground.images[0].url %>"
+        alt=""
+      />
       <% } else { %>
       <img
         class="img-fluid"
+        crossorigin="anonymous"
         src="https://res.cloudinary.com/dy4jgwfkr/image/upload/v1711320871/YelpCamp/spkn4uiva5vczxkrb6ae.png"
         alt=""
       />
