change campgrounds to national parks

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,10 +16,10 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">YelpCamp</h3>
+          <h3 class="float-md-start mb-0">HikeNationalParks</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a href="#" class="nav-link active" aria-current="page">Home</a>
-            <a href="/campgrounds" class="nav-link">Campgrounds</a>
+            <a href="/nationalParks" class="nav-link">National Parks</a>
             <% if (!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Sign Up</a>
@@ -30,14 +30,14 @@
         </div>
       </header>
       <main class="px-3">
-        <h1>YelpCamp</h1>
+        <h1>HikeNationalParks</h1>
         <p class="lead">
-          Welcome to YelpCamp! <br />
-          Jump right in and explore our many campgrounds. <br />
-          Feel free to share some of your own and comment on others!
+          Welcome to HikeNationalParks! <br />
+          Jump right in and explore our many National Parks and hikes. <br />
+          Feel free to share some of your own hikes and comment on others!
         </p>
-        <a class="btn btn-large text-white fw-bold" href="/campgrounds"
-          >View Campgrounds</a
+        <a class="btn btn-large text-white fw-bold" href="/nationalParks"
+          >View National Parks</a
         >
       </main>
       <footer class="mt-auto text-white-50">
