--- a/views/nationalParks/index.ejs
+++ b/views/nationalParks/index.ejs
@@ -1,19 +1,16 @@
 <% layout('layouts/boilerplate') %>
 <div id="cluster-map"></div>
-<h1>All Campgrounds</h1>
-<div>
-  <a href="/campgrounds/new">Add Campground</a>
-</div>
+<h1>National Parks</h1>
 
-<% for (let campground of campgrounds) { %>
+<% for (let nationalPark of nationalParks) { %>
 <div class="card mb-3">
   <div class="row">
     <div class="col-md-4">
-      <% if (campground.images.length) { %>
+      <% if (nationalPark.images.length) { %>
       <img
         crossorigin="anonymous"
         class="img-fluid"
-        src="<%= campground.images[0].url %>"
+        src="<%= nationalPark.images[0].url %>"
         alt=""
       />
       <% } else { %>
@@ -27,16 +24,16 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %></p>
+        <h5 class="card-title"><%= nationalPark.title %></h5>
+        <p class="card-text"><%= nationalPark.description %></p>
         <p class="card-text">
-          <small class="text-muted"><%= campground.location %></small>
+          <small class="text-muted"><%= nationalPark.state %></small>
         </p>
         <a
           class="btn btn-outline-secondary"
-          href="/campgrounds/<%= campground._id %>"
+          href="/nationalParks/<%= nationalPark._id %>"
         >
-          View <%= campground.title %>
+          View <%= nationalPark.title %>
         </a>
       </div>
     </div>
@@ -45,6 +42,6 @@
 <% } %>
 <script>
   const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
-  const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+  const nationalParks = {features: <%- JSON.stringify(nationalParks) %>}
 </script>
 <script src="/javascript/clusterMap.js"></script>
