--- a/views/nationalParks/new.ejs
+++ b/views/nationalParks/new.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-  <h1 class="text-center">New Campground</h1>
+  <h1 class="text-center">New National Park</h1>
   <div class="col-md-6 offset-md-3">
     <form
-      action="/campgrounds"
+      action="/nationalParks"
       method="POST"
       novalidate
       class="needs-validation"
@@ -14,8 +14,8 @@
           type="text"
           class="form-control"
           id="title"
-          name="campground[title]"
-          placeholder="Campground"
+          name="nationalPark[title]"
+          placeholder="National Park"
           required
         />
         <label class="form-label" for="title">Title</label>
@@ -24,12 +24,12 @@
         <input
           type="text"
           class="form-control"
-          id="location"
-          name="campground[location]"
-          placeholder="Location"
+          id="state"
+          name="nationalPark[state]"
+          placeholder="State"
           required
         />
-        <label class="form-label" for="location">Location</label>
+        <label class="form-label" for="state">State</label>
       </div>
       <div class="mb-3 input-group">
         <label class="input-group-text" for="image">Upload Image(s)</label>
@@ -49,11 +49,11 @@
             class="form-control"
             aria-label="Amount (to the nearest dollar)"
             id="price"
-            name="campground[price]"
+            name="nationalPark[price]"
             placeholder="150"
             required
           />
-          <label for="price" class="form-label">Price</label>
+          <label for="price" class="form-label">Entrance Fee</label>
         </div>
         <span class="input-group-text">.00</span>
       </div>
@@ -61,7 +61,7 @@
         <textarea
           class="form-control"
           id="description"
-          name="campground[description]"
+          name="nationalPark[description]"
           placeholder="Description"
           style="height: 100px"
           required
@@ -70,9 +70,11 @@
       </div>
 
       <div class="mb-3">
-        <button class="btn btn-outline-primary">Add Campground</button>
+        <button class="btn btn-outline-primary">Add National Park</button>
       </div>
     </form>
-    <a class="btn btn-outline-secondary" href="/campgrounds">All Campgrounds</a>
+    <a class="btn btn-outline-secondary" href="/nationalParks"
+      >All National Parks</a
+    >
   </div>
 </div>
