--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,8 +15,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/campgrounds">Campgrounds</a>
-        <a class="nav-link" href="/campgrounds/new">New Campground</a>
+        <a class="nav-link" href="/nationalParks">National Parks</a>
+        <a class="nav-link" href="/nationalParks/new">New National Park</a>
       </div>
       <div class="navbar-nav ms-auto">
         <% if (!currentUser) { %>
