--- a/views/hikes/edit.ejs
+++ b/views/hikes/edit.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-  <h1 class="text-center">Edit National Park</h1>
+  <h1 class="text-center">Edit <%= hike.title %></h1>
   <div class="col-md-6 offset-md-3">
     <form
-      action="/nationalParks/<%= nationalPark._id %>?_method=PUT"
+      action="/nationalParks/<%= nationalPark._id %>/hikes/<%= hike._id %>?_method=PUT"
       method="POST"
       novalidate
       class="needs-validation"
@@ -14,27 +14,15 @@
           type="text"
           class="form-control"
           id="title"
-          name="nationalPark[title]"
-          placeholder="National Park"
-          value="<%= nationalPark.title %>"
+          name="hike[title]"
+          placeholder="Hike"
           required
+          value="<%= hike.title %>"
         />
         <label class="form-label" for="title">Title</label>
       </div>
-      <div class="mb-3 form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="state"
-          name="nationalPark[state]"
-          placeholder="State"
-          value="<%= nationalPark.state %>"
-          required
-        />
-        <label class="form-label" for="state">State</label>
-      </div>
       <div class="mb-3 input-group">
-        <label class="input-group-text" for="image">Add Image(s)</label>
+        <label class="input-group-text" for="image">Upload Image(s)</label>
         <input
           type="file"
           name="image"
@@ -44,37 +32,60 @@
         />
       </div>
       <div class="input-group mb-3">
-        <span class="input-group-text">$</span>
         <div class="form-floating">
           <input
             type="text"
             class="form-control"
-            aria-label="Amount (to the nearest dollar)"
-            id="price"
-            name="nationalPark[price]"
+            aria-label="Distance"
+            id="distance"
+            name="hike[distance]"
             placeholder="150"
-            value="<%= nationalPark.price %>"
+            value="<%= hike.distance %>"
             required
           />
-          <label for="price" class="form-label">Entrance Fee</label>
+          <label for="distance" class="form-label">Distance</label>
         </div>
-        <span class="input-group-text">.00</span>
+        <span class="input-group-text">miles</span>
       </div>
       <div class="mb-3 form-floating">
         <textarea
           class="form-control"
           id="description"
-          name="nationalPark[description]"
+          name="hike[description]"
           placeholder="Description"
           style="height: 100px"
           required
         >
-          <%= nationalPark.description %>
-        </textarea>
+          <%= hike.description %></textarea
+        >
         <label class="form-label" for="description">Description</label>
       </div>
+      <div class="my-3 form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="difficulty"
+          name="hike[difficulty]"
+          placeholder="Difficulty"
+          value="<%= hike.difficulty %>"
+          required
+        />
+        <label class="form-label" for="difficulty">Difficulty</label>
+      </div>
+      <div class="my-3 form-floating" hidden>
+        <input
+          type="text"
+          class="form-control"
+          id="nationalPark"
+          name="hike[nationalPark]"
+          placeholder="NationalPark"
+          required
+          value="<%= nationalPark._id %>"
+        />
+        <label class="form-label" for="nationalPark">National Park</label>
+      </div>
       <div class="mb-3">
-        <% nationalPark.images.forEach((img, i) => { %>
+        <% hike.images.forEach((img, i) => { %>
         <img
           crossorigin="anonymous"
           src="<%= img.thumbnail %>"
@@ -94,7 +105,7 @@
         <% }) %>
       </div>
       <div class="mb-3">
-        <button class="btn btn-outline-primary">Save National Park</button>
+        <button class="btn btn-outline-primary">Save Hike</button>
       </div>
     </form>
     <a
