--- a/views/hikes/show.ejs
+++ b/views/hikes/show.ejs
@@ -177,4 +177,4 @@
   const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
   const hike = <%- JSON.stringify(hike) %>
 </script>
-<script src="/javascript/showPageMap.js"></script>
+<script src="/javascript/hikeShowPageMap.js"></script>
