--- a/views/nationalParks/index.ejs
+++ b/views/nationalParks/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div id="cluster-map"></div>
-<h1>National Parks</h1>
+<h1 class="text-center my-3">National Parks</h1>
 
 <% for (let nationalPark of nationalParks) { %>
 <div class="card mb-3">
