--- a/views/nationalParks/show.ejs
+++ b/views/nationalParks/show.ejs
@@ -1,88 +1,56 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-  <div class="col-6">
-    <div id="nationalParkImages" class="carousel slide" data-bs-ride="true">
-      <div class="carousel-indicators">
-        <% nationalPark.images.forEach((image, i) => { %>
-        <button
-          type="button"
-          data-bs-target="#nationalParkImages"
-          data-bs-slide-to="<%= i %>"
-          class="<%= i === 0 ? 'active' : '' %>"
-          aria-current="<%= i === 0 ? 'true' : '' %>"
-          aria-label="Slide <%= i + 1 %>"
-        ></button>
-        <% }) %>
-      </div>
-      <div class="carousel-inner">
-        <% nationalPark.images.forEach((image, i) => { %>
-        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-          <img
-            crossorigin="anonymous"
-            src="<%= image.url %>"
-            class="d-block w-100"
-            alt=""
-          />
-        </div>
-        <% }) %>
-      </div>
-      <% if (nationalPark.images.length > 1) { %>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#nationalParkImages"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#nationalParkImages"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-      <% } %>
-    </div>
-    <div class="card text-center mb-3">
-      <div class="card-body">
-        <h5 class="card-title"><%= nationalPark.title %></h5>
-        <p class="card-text"><%= nationalPark.description %></p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item text-muted"><%= nationalPark.state %></li>
-        <li class="list-group-item">$<%= nationalPark.price %></li>
-      </ul>
-      <% if (currentUser && nationalPark.author.equals(currentUser._id)) { %>
-      <div class="card-body">
-        <a
-          href="/nationalParks/<%= nationalPark._id %>/edit"
-          class="card-link btn btn-outline-secondary"
-          >Edit</a
-        >
-        <form
-          class="d-inline"
-          action="/nationalParks/<%= nationalPark._id %>?_method=DELETE"
-          method="POST"
-        >
-          <button class="btn btn-outline-dark">Delete</button>
-        </form>
-      </div>
-      <% } %>
-      <div class="card-footer text-muted">
-        Submitted by <%= nationalPark.author.username %>
-      </div>
-    </div>
-  </div>
-  <div class="col-6">
-    <div id="map"></div>
+<div id="cluster-map"></div>
+<div class="my-3">
+  <h1 class="text-center"><%= nationalPark.title %></h1>
+  <div class="d-flex justify-content-center">
+    <a
+      class="btn btn-outline-primary"
+      href="/nationalParks/<%= nationalPark._id %>/hikes/new"
+      >Add a Hike</a
+    >
   </div>
 </div>
+<% for (let hike of nationalPark.hikes) { %>
+<div class="card mb-3">
+  <div class="row">
+    <div class="col-md-4">
+      <% if (hike.images.length) { %>
+      <img
+        crossorigin="anonymous"
+        class="img-fluid"
+        src="<%= hike.images[0].url %>"
+        alt=""
+      />
+      <% } else { %>
+      <img
+        class="img-fluid"
+        crossorigin="anonymous"
+        src="https://res.cloudinary.com/dy4jgwfkr/image/upload/v1711320871/YelpCamp/spkn4uiva5vczxkrb6ae.png"
+        alt=""
+      />
+      <% } %>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><%= hike.title %></h5>
+        <p class="card-text"><%= hike.description %></p>
+        <p class="card-text">
+          <small class="text-muted"><%= nationalPark.title %></small>
+        </p>
+        <a
+          class="btn btn-outline-secondary"
+          href="/nationalParks/<%= nationalPark._id %>/hikes/<%= hike._id %>"
+        >
+          View <%= hike.title %>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<% } %>
 <script>
   const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
-  const nationalPark = <%- JSON.stringify(nationalPark) %>
+  const hikes = {features: <%- JSON.stringify(nationalPark.hikes) %>}
+  const nationalPark = <%- JSON.stringify(nationalPark.geometry.coordinates) %>
 </script>
 <script src="/javascript/showPageMap.js"></script>
